# Password-Generator

./: Cargo.toml
src/: consts.rs  main.rs
src/cli/password_generator/: mod.rs
src/gui/: mod.rs
src/gui/password_generator/: mod.rs
src/gui/splash_screen/: mod.rs
